labs/helper-files/heroes-web-aci-vk.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name:  heroes-web-deploy
  labels:
    name:  heroes-web
spec:
  replicas: 4
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name:  heroes-web
    spec:
      imagePullSecrets:
        - name: acr-secret
      containers:
      - image: ghoelzer2azure/rating-web:latest
        name:  heroes-web-cntnr
        resources:
          requests:
            cpu: "0.5"
            memory: "1Gi"
        ports:
        - containerPort:  8080
          name:  heroes-web
        imagePullPolicy: Always
      nodeSelector:
        kubernetes.io/hostname: virtual-kubelet-<linux node name>
      tolerations:
      - key: azure.com/aci
        effect: NoSchedule
      restartPolicy: Always
