labs/helper-files/heroes-web-api-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    name: api
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  selector:
    name: heroes-api
---
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    name: web
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    name: heroes-web
