labs/helper-files/heroes-web-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    name: api
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  selector:
    name: heroes-api
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name:  heroes-api-deploy
  labels:
    name:  heroes-api
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name:  heroes-api
    spec:
      imagePullSecrets:
        - name: acr-secret
      containers:
      - image: ghoelzer2azure/rating-api:latest
        name:  heroes-api-cntnr
        resources:
          requests:
            cpu: "20m"
            memory: "55M"
        ports:
        - containerPort:  3000
          name:  heroes-api
        imagePullPolicy: Always
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    name: web
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    name: heroes-web
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name:  heroes-web-deploy
  labels:
    name:  heroes-web
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name:  heroes-web
    spec:
      imagePullSecrets:
        - name: acr-secret
      containers:
      - image: ghoelzer2azure/rating-web:latest
        name:  heroes-web-cntnr
        resources:
          requests:
            cpu: "0.5"
            memory: "1Gi"
        ports:
        - containerPort:  8080
          name:  heroes-web
        imagePullPolicy: Always
      restartPolicy: Always
