labs/helper-files/heroes-web-ingress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: ingress-external
  labels:
    name: web
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    name: heroes-web
    namespace: demo-heroes
