labs/helper-files/spring-demo-web-ingress-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: spring-web-ingress
  namespace: ingress-external
spec:
  type: ExternalName
  externalName: sampleapp.dev3b79.svc.cluster.local
  ports:
  - port: 8080
