labs/helper-files/heroes-web-ingress-external.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: heroes-web-ingress
  namespace: ingress-external
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: heroes-web-ingress
          servicePort: 80
      - path: /heroes
        backend:
          serviceName: heroes-api-ingress
          servicePort: 3000
      - path: /sample
        backend:
          serviceName: spring-web-ingress
          servicePort: 8080
